classDiagram
    direction TB
    class Filters {
        +entities_type : mixed
        +filters_types : mixed
        #init()
        #_get_map()
        +get_cpt_labels()
        +register_post_type()
        +update(object, new_values)
        +fetch(args, output)
        +register_filter_type(class_name)
        +deregister_filter_type(class_name)
        +fetch_filter_types(output)
        +fetch_supported_filter_types(types)
        +fetch_ids(args)
        +fetch_by_collection(collection, args)
        +fetch_ids_by_collection(collection, args)
        +order_result(result, collection, include_disabled)
        +hook_delete_when_metadata_deleted(metadatum, permanent)
        +hook_update_when_metadata_saved_as_private(metadatum)
        +fetch_by_collections(args, collection_ids)
    }
    class Repository {
        +entities_type : string
        #use_logs : bool
        #logs_repository : Logs
        -map : array
        +disable_logs()
        +enable_logs()
        +get_enabled_logs()
        #__construct()
        +init_objects()
        +get_map()
        +get_name()
        +insert(obj)
        +insert_metadata(obj, prop, diffs)
        +maybe_add_slashes(value)
        +fetch_output(WP_Query, output)
        +parse_fetch_args(args)
        +get_default_properties(map)
        +get_mapped_property(entity, prop)
        +$get_collections_db_identifiers()
        +$get_entity_by_post(post)
        +$get_entity_by_post_type(post_type, post)
        +$get_repository(entity)
        +fetch_one(args)
        +trash(entity)
        +delete(entity, permanent)
        -delete_attachments(entity)
        +can_edit(entity, user)
        +can_read(entity, user)
        +can_delete(entity, user)
        +can_publish(entity, user)
        +unique_multidimensional_array(array, key)
        -insert_thumbnail(obj, diffs)
        +get_descendants_ids(id, depth)
        +get_capabilities()
        #sanitize_value(content)
    }
    Repository ..> Filters
    Repository ..> Repository
    Repository <|-- Filters
